# mac-aid

./: Cargo.toml  README.md  README.zh-CN.md
src/: app.rs  brew.rs  config.rs  indexer.rs  kb_builder.rs  langchain_integration.rs  log.rs  main.rs  ollama.rs  rag.rs  ui.rs  vector_store.rs
