[package]
name = "mac-aid"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
langchain-rust = "4.6"
dirs = "5.0"
regex = "1.11"
bincode = "1.3"
rand = "0.8"
